src/App.css
body {
  margin: 0;
  font-family: Arial, sans-serif;
  background: linear-gradient(to right, #f7a8d5, #f8d7e8);
  min-height: 100vh;
}

.app {
  text-align: center;
  padding: 40px 20px;
}

h1 {
  color: white;
  font-size: 70px;
  margin-bottom: 30px;
  text-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
}

.task-input {
  display: flex;
  justify-content: center;
  gap: 15px;
  flex-wrap: wrap;
  margin-bottom: 40px;
}

.task-input input,
.task-input select {
  padding: 15px;
  border: none;
  border-radius: 15px;
  background: #f7e9ef;
  font-size: 18px;
  color: #555;
  outline: none;
  box-sizing: border-box;
}

.task-input input[type="text"] {
  width: 280px;
}

.task-input input[type="date"] {
  padding: 15px;
  border: none;
  border-radius: 15px;
  background: #f7e9ef;
  font-size: 18px;
  color: #555;
  outline: none;
  box-sizing: border-box;
}

.task-input button {
  background: #ff4f9a;
  color: white;
  border: none;
  padding: 15px 25px;
  border-radius: 15px;
  font-size: 18px;
  cursor: pointer;
  box-shadow: 0 5px 15px rgba(255, 79, 154, 0.4);
  transition: 0.3s;
}

.task-input button:hover {
  transform: scale(1.05);
}

.task-list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 25px;
}

.task-card {
  width: 80%;
  max-width: 650px;
  background: rgba(255, 255, 255, 0.25);
  padding: 25px;
  border-radius: 25px;
  backdrop-filter: blur(10px);
  box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
  color: #333;
}

.task-card h2 {
  margin-bottom: 15px;
}

.task-card p {
  font-size: 20px;
}

.high {
  color: red;
  font-weight: bold;
}

.medium {
  color: orange;
  font-weight: bold;
}

.low {
  color: green;
  font-weight: bold;
}

.buttons {
  margin-top: 20px;
  display: flex;
  justify-content: center;
  gap: 15px;
}

.complete-btn {
  background: #00c853;
  color: white;
  border: none;
  padding: 12px 18px;
  border-radius: 12px;
  cursor: pointer;
}

.delete-btn {
  background: #ff5252;
  color: white;
  border: none;
  padding: 12px 18px;
  border-radius: 12px;
  cursor: pointer;
}

.completed {
  opacity: 0.7;
  text-decoration: line-through;
}

input[type="date"]::-webkit-calendar-picker-indicator {
  opacity: 1;
  filter: invert(0.4);
  cursor: pointer;
}

@media (max-width: 600px) {
  h1 {
    font-size: 55px;
  }

  .task-input {
    flex-direction: column;
    align-items: center;
    gap: 12px;
  }

  .task-input input,
  .task-input select,
  .task-input button,
  .task-input input[type="date"] {
    width: 85% !important;
    max-width: 320px;
    box-sizing: border-box;
  }

  .task-card {
    width: 90%;
  }
}

